--- a/assessment/safetyguides.html
+++ b/assessment/safetyguides.html
@@ -49,9 +49,9 @@
   
         <nav id="flexnavbar">
           <a href="index.html">Home</a>
-          <a href="safetyguides.html">Safety Guides</a>
+          <a class="active" href="safetyguides.html">Safety Guides</a>
           <a href="events.html">Events</a>
-          <a class="active" href="community.html">Community</a>
+          <a href="community.html">Community</a>
           <a href="insights_recommendations.html">Insights and Recommendations</a>
         </nav>
   
@@ -60,9 +60,9 @@
         <div class="off-screen-menu">
           <ul>
             <a href="index.html">Home</a>
-            <a href="safetyguides.html">Safety Guides</a>
+            <a class="active" href="safetyguides.html">Safety Guides</a>
             <a href="events.html">Events</a>
-            <a class="active" href="community.html">Community</a>
+            <a href="community.html">Community</a>
             <a href="insights_recommendations.html">Insights and Recommendations</a>
           </ul>
         </div>
@@ -106,7 +106,7 @@
                 <div class="article-info">
                   <p>Poppy Evans</p>
                   <h3>Travelling to Rio de Janeiro?</h3>
-                  <p class="author">5 tips for staying safe in this bustling city!</p>
+                  <p class="author">5 tips for staying safe!</p>
                   <div class="article-meta">
                       <span>1d ago</span> | 
                       <span>224 views</span> | 
@@ -128,7 +128,7 @@
                   <div class="article-info">
                     <p>Alexis Bianchi</p>
                     <h3>Sao Paulo Travel Safety Guide</h3>
-                    <p class="author">Top tips for staying safe in Sao Paulo</p>
+                    <p class="author">Top tips for staying safe!</p>
                     <div class="article-meta">
                         <span>Aug 20</span> | 
                         <span>3K views</span> | 
@@ -145,7 +145,16 @@
           </div>
         </div>
       </main>
-      <footer>
+      <footer class="footer">
+        <h2>Acknowledgements</h2>
+        <p>In this report, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
+          I critically reviewed and edited all AI-generated content to ensure it reflects my own
+          understanding and perspective.</p>
+        <nav class="footer-links">
+          <a href="#about">About</a>
+          <a href="#contact">Contact</a>
+          <a href="#privacy">Privacy Policy</a>
+        </nav>
         <!-- &copy is unicode equivalent for copyright symbol (©)-->
         <p>&copy; 2024 Your Name. All rights reserved.</p>
       </footer>
