--- a/assessment/add-event.html
+++ b/assessment/add-event.html
@@ -51,8 +51,8 @@
       <nav id="flexnavbar">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
-        <a href="events.html">Events</a>
-        <a class="active" href="community.html">Community</a>
+        <a class="active" href="events.html">Events</a>
+        <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
@@ -103,3 +103,19 @@
           </div>
       </main>
     </div>
+
+    <footer class="footer">
+      <h2>Acknowledgements</h2>
+      <p>In this report, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
+        I critically reviewed and edited all AI-generated content to ensure it reflects my own
+        understanding and perspective.</p>
+      <nav class="footer-links">
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="#privacy">Privacy Policy</a>
+      </nav>
+      <!-- &copy is unicode equivalent for copyright symbol (©)-->
+      <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
+  </body>
+</html>
