--- a/assessment/community.html
+++ b/assessment/community.html
@@ -151,7 +151,16 @@
 
       </main>
 
-      <footer>
+      <footer class="footer">
+        <h2>Acknowledgements</h2>
+        <p>In this report, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
+          I critically reviewed and edited all AI-generated content to ensure it reflects my own
+          understanding and perspective.</p>
+        <nav class="footer-links">
+          <a href="#about">About</a>
+          <a href="#contact">Contact</a>
+          <a href="#privacy">Privacy Policy</a>
+        </nav>
         <!-- &copy is unicode equivalent for copyright symbol (©)-->
         <p>&copy; 2024 Your Name. All rights reserved.</p>
       </footer>
