--- a/assessment/read-more.html
+++ b/assessment/read-more.html
@@ -55,8 +55,9 @@
     <!--<script> tag used to include JavaScript files in your web page, Modules (organize JS code into separate files + import/export functions, objects, or variables between them.-->
     <!--Embed or reference JavaScript + defer which tells the browser to download script in the background while HTML is being read and interpreted.-->
     <script type="module" src="js/index.js" defer></script>
+    <script type="module" src="js/components.js" defer></script>
     <script type="module" src="js/page_load_message.js" defer></script>
-    <script type="module" src="js/serviceWorker.js" defer></script>
+    <script type="module" src="js/manifest.json" defer></script>
 
     <!-- Appears in the browser tab and is used by search engines.-->
     <title>Home</title>
@@ -79,8 +80,8 @@
       <nav id="flexnavbar">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
-        <a href="events.html">Events</a>
-        <a class="active" href="community.html">Community</a>
+        <a class="active" href="events.html">Events</a>
+        <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
@@ -116,23 +117,207 @@
       <div class="guide-text">
         <h2>Introduction</h2>
         <p>Brasilia, the capital of Brazil, is renowned for its modernist architecture and unique urban planning. While the city offers an array of cultural attractions and beautiful parks, it is essential to prioritize safety to ensure a pleasant visit. This guide provides practical tips and recommendations for a safe and enjoyable experience in Brasilia.</p>
-        <h2>Understanding the city</h2>
         <p>Brasilia is divided into several sectors, each with its distinct purpose, such as residential, commercial, and governmental areas. The city's layout makes navigation relatively straightforward; however, being aware of your surroundings is crucial.</p>
+        <h2>Safety Tips</h2>
+        <h3>1. Stay Aware of Your Surroundings</h3>
+        <p>Always be conscious of your environment, especially in crowded areas or when using public transportation. Keep an eye on your belongings and avoid displaying expensive items like jewelry or electronics.</p>
+        <h3>2. Use Trusted Transportation</h3>
+        <p>Opt for reputable taxi services or rideshare apps like Uber, especially at night. Public transportation can be an option, but it’s advisable to use it during daylight hours and avoid empty buses or metro cars.</p>
+        <h3>3. Choose Your Accommodation Wisely</h3>
+        <p>Research hotels or hostels in safe neighborhoods. Areas like Asa Sul and Asa Norte are generally more secure, with easy access to tourist attractions.</p>
+        <h3>4. Be Cautious at Night</h3>
+        <p>While Brasilia is relatively safe compared to other Brazilian cities, it's best to avoid wandering alone after dark, especially in less populated areas. Stick to well-lit streets and consider traveling in groups.</p>
+        <h3>5. Learn Basic Portuguese Phrases</h3>
+        <p>While many Brazilians speak English, knowing a few key phrases in Portuguese can enhance your interactions and help in emergency situations. Simple phrases like “onde fica?” (where is?) and “ajuda!” (help!) can be invaluable.</p>
+        <h3>6. Local Customs and Etiquette</h3>
+        <p>Understanding local customs can also enhance your safety and interactions. Brazilians are friendly and welcoming, so greeting people politely and respecting cultural norms can foster positive encounters.</p>
+        <h3>7. Stay Informed</h3>
+        <p>Keep up-to-date with local news and advisories, especially regarding demonstrations or events that may affect your travel plans. Registering with your embassy can also provide additional support.</p>
+        <h2>Conclusion</h2>
+        <p>By staying vigilant and following these safety tips, you can enjoy all that Brasilia has to offer. From its stunning architecture to its vibrant culture, Brasilia is a captivating destination waiting to be explored. Safe travels!</p>
       </div>
-      <div class="guide-end>">
+      <div class="guide-end">
         <div class="guide-meta">
           <span>1d ago</span> | 
           <span>224 views</span> | 
           <span>6 comments</span>
+          <button class="view-comments-button" onclick="toggleComments()">View Comments</button>
+        </div>
+        <div class="comments-section" id="commentsSection" style="display: none;">
+          <div class="comment">
+            <img src="./images/user_profile2.jpg" alt="User 1" class="profile-icon" />
+            <div class="comment-text">
+              <span class="username">Kayli Bell</span>
+              <p>Loved this article! I especially appreciated the section on public transport safety. Very useful!🚍</p>
+              <a class="reply-button" onclick="replyPost(event, this)">Reply</a>
+            </div>
+          </div>
+          <div class="comment">
+              <img src="./images/user_profile3.jpg" alt="User 2" class="profile-icon" />
+              <div class="comment-text">
+                <span class="username">Lia Anderson</span>
+                <p>Awesome guide! The emergency numbers section is particularly helpful. Keep up the great work! 👏</p>
+                <a class="reply-button" onclick="replyPost(event, this)">Reply</a>
+              </div>
+          </div>
+          <div class="comment">
+              <img src="./images/user_profile4.jpg" alt="User 3" class="profile-icon" />
+              <div class="comment-text">
+                <span class="username">Emma Lim</span>
+                <p>This guide is a lifesaver! I feel much more prepared for my trip. Thanks for the tips! 🌟</p>
+                <a class="reply-button" onclick="replyPost(event, this)">Reply</a>
+              </div>
+            </div>
         </div>
       </div>
 
+      <div class="newsletter">
+        <h2>Solo Tourer Newsletter</h2>
+        <p>Our biggest stories, handpicked for you, written by you.</p>
+        <div class="read-more-footer">
+          <div class="rm-footer">
+            <input type="text" id="searchInput" placeholder="Enter your email" aria-label="Email">
+            <button class="signup-button">Sign Up!</button>
+          </div>
+          <p class="signup-message" id="signupMessage" style="display: none;"></p>
+        </div>
+      </div>
+
+      <div>
+        <h2 class="read-more-page">Read More</h2>
+      </div>
+
+      <div class="guide-cards">
+        <!-- First Article -->
+          <div class="guide-card-details">
+            <div class="guide-card-info">
+              <div class="guide-card-image">
+                <img src="./images/braisilia.jpg" alt="Sao Paulo" />
+              </div>
+              <p>Claire Willows</p>
+              <h3>Brasilia Travel Safety Guide</h3>
+              <p class="author">Don't let the fear stop you!</p>
+              <div class="article-meta">
+                  <span>1d ago</span> | 
+                  <span>224 views</span> | 
+                  <span>6 comments</span>
+              </div>
+              <div class="guide-card-read-more">
+                <a href="./read-more.html" class="button">Read More</a>
+              </div>
+            </div>
+          </div>
+          <!-- Second Article -->
+          <div class="guide-card-details">
+            <div class="guide-card-info">
+              <div class="guide-card-image">
+                <img src="./images/sao paulo.jpg" alt="Sao Paulo" />
+              </div>
+              <p>Alexis Bianchi</p>
+              <h3>Sao Paulo Travel Safety Guide</h3>
+              <p class="author">Top tips for staying safe!</p>
+              <div class="guide-card-meta">
+                  <span>Aug 20</span> | 
+                  <span>3K views</span> | 
+                  <span>9 comments</span>
+              </div>
+              <div class="guide-card-read-more">
+                <a href="./read-more.html" class="button">Read More</a>
+              </div>
+            </div>
+          </div>
+          <!-- Third Article -->
+          <div class="guide-card-details">
+            <div class="guide-card-info">
+              <div class="guide-card-image">
+                <img src="./images/Rio de Janeiro.jpg" alt="Rio de Janeiro" />
+              </div>
+              <p>Poppy Evans</p>
+              <h3>Travelling to Rio de Janeiro?</h3>
+              <p class="author">5 tips for staying safe!</p>
+              <div class="guide-card-meta">
+                  <span>1d ago</span> | 
+                  <span>224 views</span> | 
+                  <span>6 comments</span>
+              </div>
+              <div class="guide-card-read-more">
+                <a href="./read-more.html" class="button">Read More</a>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <div class="guide-cards">
+        <!-- First Article -->
+          <div class="guide-card-details">
+            <div class="guide-card-info">
+              <div class="guide-card-image">
+                <img src="./images/sao-luis.jpeg" alt="Sao Luis" />
+              </div>
+              <p>Katherine Levine</p>
+              <h3>Sao Luis Travel Safety Guide</h3>
+              <p class="author">Embrace the adventure with confidence!</p>
+              <div class="article-meta">
+                  <span>4d ago</span> | 
+                  <span>340 views</span> | 
+                  <span>8 comments</span>
+              </div>
+              <div class="guide-card-read-more">
+                <a href="./read-more.html" class="button">Read More</a>
+              </div>
+            </div>
+          </div>
+          <!-- Second Article -->
+          <div class="guide-card-details">
+            <div class="guide-card-info">
+              <div class="guide-card-image">
+                <img src="./images/belo-horizonte.jpg" alt="Belo Horizonte" />
+              </div>
+              <p>Aisha Das</p>
+              <h3>Belo Horizonte Safety Guide</h3>
+              <p class="author">Travel smart and enjoy every moment.</p>
+              <div class="guide-card-meta">
+                  <span>Oct 23</span> | 
+                  <span>2K views</span> | 
+                  <span>9 comments</span>
+              </div>
+              <div class="guide-card-read-more">
+                <a href="./read-more.html" class="button">Read More</a>
+              </div>
+            </div>
+          </div>
+          <!-- Third Article -->
+          <div class="guide-card-details">
+            <div class="guide-card-info">
+              <div class="guide-card-image">
+                <img src="./images/curitiba.webp" alt="Curtiba" />
+              </div>
+              <p>Alma Nilsson</p>
+              <h3>Welcome to Curtiba!</h3>
+              <p class="author">Navigate Brasilia with peace of mind.</p>
+              <div class="guide-card-meta">
+                  <span>1d ago</span> | 
+                  <span>224 views</span> | 
+                  <span>6 comments</span>
+              </div>
+              <div class="guide-card-read-more">
+                <a href="./read-more.html" class="button">Read More</a>
+              </div>
+            </div>
+          </div>
+      </div>
+
     </main>
-    <footer>
+    <footer class="footer">
       <h2>Acknowledgements</h2>
       <p>In this report, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
         I critically reviewed and edited all AI-generated content to ensure it reflects my own
         understanding and perspective.</p>
+      <nav class="footer-links">
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="#privacy">Privacy Policy</a>
+      </nav>
       <!-- &copy is unicode equivalent for copyright symbol (©)-->
       <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
